...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="YHD-dz-Fxm" id="7D2-5Q-ZW2"/>
                            <outlet property="delegate" destination="YHD-dz-Fxm" id="Pgj-GB-SvF"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Tasks" id="zcW-qZ-pP7">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="mXR-Gb-BMB">
                            <connections>
                                <segue destination="zSN-IQ-Ibm" kind="show" id="UnO-zL-OEf"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Hvw-CE-C44">
...
                                        <connections>
                                            <action selector="agregarTareasBTN_press:" destination="zSN-IQ-Ibm" eventType="touchUpInside" id="dAV-G7-iIh"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7XE-A0-aLr">
                                        <rect key="frame" x="20" y="58" width="290" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="theDescriptionField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CEh-7N-0ki">
                                        <rect key="frame" x="20" y="20" width="290" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="theTitle"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="bottom" secondItem="Qb5-J9-7vX" secondAttribute="bottom" id="3OR-ee-VOS"/>
...
                                        <accessibility key="accessibilityConfiguration" identifier="theDescriptionField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mnE-36-SUx">
                                        <rect key="frame" x="150" y="89" width="40" height="30"/>
                                        <state key="normal" title="Edit">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="editButton_press:" destination="CH2-YS-yyH" eventType="touchUpInside" id="dDO-yl-Ebt"/>
                                        </connections>
                                    </button>
...
